# shihu

./: .gitattributes  .gitignore  README.md  REAME.md  User.md  k230_rtsp_ai_gateway.py  pubspec.yaml  requirements-agri-vector.txt
.github/workflows/: build-packages.yml  release.yml
.playwright-cli/: page-2026-03-11T08-38-37-979Z.yml
android/app/: build.gradle.kts
bag/: 斛生-linux-x64-runner
config/: agri-context-bridge.ini  agri-profiles.json  edgelink.ini  edgelink.ini.bak_20260309  frpc.toml  frps.toml.example  go2rtc.yaml
config/agri-knowledge/: README.md
doc/: 代码规范与开发规范.md  功能设计文档.md  开发任务拆分.md  接口契约文档.md  数据字典与枚举规范.md  架构设计文档.md  页面规格与交互文档.md
docs/: architecture.md  build-and-flash.md  java-ai-collaboration.md  java-openclaw-agri-collaboration.md  java-video-collaboration.md  k230-tencent-cloud-cooperation.md  modbus-register-map.md  network-plan.md  overview.md  test-plan.md  uplink-format.md  video-v1.md
husheng-client/: README.md  analysis_options.yaml
husheng-client/doc/: java-video-collaboration.md  代码规范与开发规范.md  接口契约文档.md  数据字典与枚举规范.md  服务接入说明.md  页面规格与交互文档.md
husheng-client/ohos/: .gitignore  oh-package.json5
husheng-client/test/: app_workspace_scaffold_test.dart  common_button_test.dart  platform_log_repository_test.dart  realtime_detect_controller_test.dart  remembered_account_repository_test.dart  settings_page_test.dart  settings_profile_snapshot_test.dart  workspace_layout_test.dart
husheng-client/tool/: generate_app_icons.sh  package_linux_all.sh  package_linux_extra_archives.sh  resolve_windows_build_dir.ps1
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
k230-rtsp-ai-gateway/: README.md  k230_rtsp_ai_gateway.py
lib/: main.dart
lib/app/: app.dart  app_localizations.dart  app_palette.dart  app_workspace_destination.dart  routes.dart  theme.dart
linux/: CMakeLists.txt
linux/runner/: CMakeLists.txt  my_application.cc
logs/: platform-events.jsonl
macos/Runner.xcodeproj/: project.pbxproj
ohos/: build-profile.json5  hvigorfile.ts  oh-package.json5  package-lock.json  package.json
project/: CMakeLists.txt
scripts/: build_agri_vector_index.py  install_agri_vector_deps.sh  run_agri_context_bridge.sh  run_gateway.sh  run_go2rtc.sh
src/: agri_context_bridge.py  agri_vector_knowledge.py  edgelink_gateway.py
stm32f429-modbus-gateway/: README.md
systemd/: agri-context-bridge.service  edgelink-gateway.service  frpc.service
test/: about_page_test.dart  adaptive_wrap_grid_test.dart  ai_detection_repository_test.dart  api_client_factory_test.dart  api_client_test.dart  api_response_test.dart  app_localizations_test.dart  app_routes_test.dart  app_theme_test.dart  app_workspace_scaffold_test.dart  auth_controller_test.dart  auth_storage_test.dart  current_user_label_provider_test.dart  detect_controller_test.dart  detect_page_test.dart  device_runtime_repository_test.dart  device_state_repository_test.dart  device_status_view_data_test.dart  history_page_test.dart  history_record_test.dart  history_repository_test.dart  home_overview_device_status_provider_test.dart  home_page_test.dart  login_page_test.dart  preview_workspace_seed_test.dart  real_auth_repository_test.dart  real_detect_repository_test.dart  realtime_detect_controller_test.dart  realtime_detect_page_test.dart  result_page_test.dart  service_endpoint_resolver_test.dart  service_health_repository_test.dart  settings_controller_test.dart  settings_page_test.dart  splash_page_test.dart  video_hub_page_test.dart  video_page_test.dart  video_playback_page_test.dart  video_playback_support_test.dart  video_service_endpoint_test.dart  (+1 more)
tool/: build_ohos_release.sh  generate_release_manifest.sh  package_ios_ipa.sh  package_linux_all.sh  package_linux_appimage.sh  package_linux_common.sh  package_linux_deb.sh  package_linux_flatpak.sh  package_linux_pacman.sh  package_linux_portable.sh  package_linux_rpm.sh  package_macos_dmg.sh  package_windows_installer.ps1  realtime_preview.dart
web/: flutter_bootstrap.js  index.html  manifest.json
windows/: CMakeLists.txt
(+353 files in other folders)
